# dream150

./: .gitignore  README.md  icp.sample.yaml  pyproject.toml
.github/workflows/: tests.yml
dream150/: __init__.py  cli.py  client.py  config.py  pipeline.py  scoring.py  suppression.py
examples/: food-banks.csv
tests/: conftest.py  test_client.py  test_config.py  test_pipeline.py  test_scoring.py  test_suppression.py
tests/fixtures/: org_feeding_america.json  org_yolo_foodbank.json  search_foodbank_ca.json
